# wavetable-generator

./: .gitattributes  .gitignore  CLAUDE.md  Makefile  README.md  presets.yaml  pyproject.toml  requirements.txt  verify.py  wavetable-foundry-spec.md
.claude/: settings.json
.claude/hooks/: fmt.py  gate.py
src/wtfoundry/: __init__.py  api.py  cli.py
src/wtfoundry/core/: __init__.py  build.py  catalog.py  config.py  export.py  features.py  spectro.py  synth.py  validate.py  write.py
src/wtfoundry/generators/: __init__.py  additive.py  base.py  fm.py  formant.py  phasedist.py  spectral.py  wavefold.py
tests/: fixtures.py  test_api.py  test_build.py  test_catalog.py  test_features.py  test_generators.py  test_oracle.py  test_scaffold.py  test_synth.py
tools/audition/: README.md  server.py
tools/audition/static/: app.js  index.html
